Java 11 (#6435) Remove deprecated JVM parameter UseConcMarkSweepGC